5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1674_1872.log
== TEST (2019-04-27 12:23:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y>0):
	print("Eixo Y")
   else (x>0 and y==0):
		print("Eixo Y")
	
	
-- ERROR:
File "XXXX", line 17
    else (x>0 and y==0):
                       ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:23:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y>0):
	print("Eixo Y")
else (x>0 and y==0):
		print("Eixo Y")
	
	
-- ERROR:
File "XXXX", line 17
    else (x>0 and y==0):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:23:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y>0):
	print("Eixo Y")
elif (x>0 and y==0):
		print("Eixo Y")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:24:18) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y>0):
	print("Eixo Y")
elif (x>0 and y==0):
		print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:24:34) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y>0):
	print("Eixo Y")
elif (x>0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:25:44) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x=!0 and y==0):
	print("Eixo X")
	
	
-- ERROR:
File "XXXX", line 17
    elif (x=!0 and y==0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:25:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:26:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- EXECUTION TIME:
0.123987
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:26:23) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:26:37) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:26:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y and (x==0 or y==0)):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:27:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 12:27:56) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 12:28:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- EXECUTION TIME:
0.138998
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:19:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:19:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- EXECUTION TIME:
0.152107
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
origem
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:20:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:20:08) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:20:09) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:20:10) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:34:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("Origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:34:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
x = float(input("valor de x: "))
y = float(input("valor de y: "))

if (x>0 and y>0):
	print("Q1")
elif (x<0 and y>0):
	print("Q2")
elif (x<0 and y<0):
	print("Q3")
elif (x>0 and y<0):
	print("Q4")
elif (x==y==0):
	print("Origem")
elif (x==0 and y!=0):
	print("Eixo Y")
elif (x!=0 and y==0):
	print("Eixo X")
	
	
-- EXECUTION TIME:
0.122503
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
